# sonos-tracker

./: README.md  pyproject.toml
sonos_tracker/: cli.py  config.py  models.py  tracker.py
src/sonos_tracker/: __init__.py  __main__.py  api.py  cli.py  database.py  sonos.py
