[project]
name = "sonos-tracker"
version = "0.1.0"
description = "Track and log what's playing on your Sonos speakers"
authors = [{name = "Sejin Kim"}]
requires-python = ">= 3.11"
dependencies = [
    "soco>=0.30",
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
sonos-tracker = "sonos_tracker.cli:cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/sonos_tracker"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
sonos-tracker = { path = ".", editable = true }

[tool.pixi.tasks]
track = { cmd = "python -m sonos_tracker track" }
history = { cmd = "python -m sonos_tracker history" }
speakers = { cmd = "python -m sonos_tracker speakers" }
now-playing = { cmd = "python -m sonos_tracker now-playing" }
serve = { cmd = "python -m sonos_tracker serve" }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
